	PR middle-end/29965 	* omp-low.c (determine_parallel_type): Don't try to optimize combined 	parallels if region->exit or region->inner->exit is NULL. 	(expand_omp_parallel): Handle NULL region->exit even if cfg is already 	built. 	(expand_omp_for_generic): Handle NULL region->cond and region->exit. 	(expand_omp_for): Use expand_omp_for_generic if either region->cond 	or region->exit is NULL. 	(expand_omp_sections): Handle NULL region->cond or region->exit. 	(expand_omp_synch):

* gcc.dg/gomp/pr29965-1.c: New test.
	* gcc.dg/gomp/pr29965-2.c: New test.
	* gcc.dg/gomp/pr29965-3.c: New test.
	* gcc.dg/gomp/pr29965-4.c: New test.
	* gcc.dg/gomp/pr29965-5.c: New test.
	* gcc.dg/gomp/pr29965-6.c: New test.
	* g++.dg/gomp/pr29965-1.C: New test.
	* g++.dg/gomp/pr29965-2.C: New test.
	* g++.dg/gomp/pr29965-3.C: New test.
	* g++.dg/gomp/pr29965-4.C: New test.
	* g++.dg/gomp/pr29965-5.C: New test.
	* g++.dg/gomp/pr29965-6.C: New test.
	* g++.dg/gomp/pr29965-7.C: New test.
	* g++.dg/gomp/pr29965-8.C: New test.
	* g++.dg/gomp/pr29965-9.C: New test.
	* g++.dg/gomp/pr29965-10.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@119483 138bc75d-0d04-0410-961f-82ee72b054a4